tried to fix white space at bottom of page

--- a/world_foundry/client/src/index.css
+++ b/world_foundry/client/src/index.css
@@ -3,6 +3,7 @@
 html {
 	max-height: 100vh;
 	max-width: 100vw;
+	margin-bottom: 0;
 }
 
 body {
